@@ -13,7 +13,6 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <javafx.version>21.0.2</javafx.version>
-        <javafx.sdk>C:\Program Files\Java\javafx-sdk-21.0.2\lib</javafx.sdk>
     </properties>
 
     <dependencies>
@@ -53,32 +52,32 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.15.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-            </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.coinue.Main</mainClass>
-                    <!-- <executable>${java.home}/bin/java</executable> -->
-                    <options>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml,javafx.swing</option>
-                    </options>
-                    <jlinkImageName>Coinue</jlinkImageName>
-                    <launcher>launcher</launcher>
-                    <compress>2</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
+                    <launcher>coinue</launcher>
+                    <jlinkImageName>coinue</jlinkImageName>
                     <noManPages>true</noManPages>
                     <stripDebug>true</stripDebug>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>java.base/java.time=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
